fixed dropdown and mobile spacing

--- a/src/app/sharedComponents/header/header.component.scss
+++ b/src/app/sharedComponents/header/header.component.scss
@@ -10,39 +10,10 @@
     0 3px 5px -1px rgba(0,0,0,.2), 
     0 6px 10px 0 rgba(0,0,0,.14), 
     0 1px 18px 0 rgba(0,0,0,.12);
-    // opacity: 0.5;
-    // .dropdown {
-    //     position: absolute;
-    //     &--overlay {
-    //         display: block;
-    //         position: fixed;
-    //         top: 0;
-    //         bottom: 0;
-    //         left: 0;
-    //         right: 0;
-    //         height: 100%;
-    //         background-color: black;
-    //         opacity: 0;
-    //         transition: opacity .2s ease-in-out;
-    //         cursor: pointer;
-    //     }
-    //     &__content {
-    //         position: fixed;
-    //         bottom: -100%;
-    //         transition: bottom .6s ease-in-out;
-    //         width: 100%;
-    //         z-index: 100;
-    //     }
-    //     &__active {
-    //         .dropdown__overlay {
-    //             opacity: .6s;
-    //             z-index: 10;
-    //         }
-    //         .dropdown_content {
-    //             bottom: 0;
-    //         }
-    //     }
-    // }
+    &--mobile {
+        justify-content: center;
+        align-items: center;
+    }
     #dropdown {
         position: fixed; /* Sit on top of the page content */
         display: none; /* Hidden by default */
@@ -55,8 +26,29 @@
         background-color: rgba(0,0,0,0.5); /* Black background with opacity */
         z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
         cursor: pointer; /* Add a pointer on hover */
+        text-align: center;
       }
-    #text {
+    #text-1 {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        font-size: 50px;
+        color: white;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        font-size: 24px;
+    }
+    #text-2 {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        font-size: 50px;
+        color: white;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        font-size: 24px;
+    }
+    #text-3 {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -64,10 +56,21 @@
         color: white;
         transform: translate(-50%,-50%);
         -ms-transform: translate(-50%,-50%);
+        font-size: 24px;
+    }
+    #text-4 {
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        font-size: 50px;
+        color: white;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        font-size: 24px;
     }
     .hamburger {
-        position: relative;
-        // display: inline-block;
+        position: absolute;
+        left: 10px; top: 10px; right: 0; bottom: 0;
         opacity: 0.7;
         outline: none;
     }
